--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
                     <div class="parametro-senha-botoes">
                         <button class="parametro-senha__botao">-</button>
-                        <p class="parametro-senha__texto">12</p>
+                        <p class="parametro-senha__texto">10</p>
                         <button class="parametro-senha__botao">+</button>
                     </div>
                 </div>
@@ -51,17 +51,18 @@
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
-                        <div class="barra"></div>
-                        <div class="forca forte"></div>
-                        <div class="parametro-senha-textos">
-                            <p>Fraca</p>
-                            <p>Média</p>
-                            <p>Forte</p>
-                        </div>
+                    <div class="barra"></div>
+                    <div class="forca fraca"></div>
+                    <div class="parametro-senha-textos">
+                        <p>Fraca</p>
+                        <p>Média</p>
+                        <p>Forte</p>
+                </div>
                 </div>
             </div>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
